fixed spacing in preview mode

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -143,7 +143,7 @@ html {
     }
 
     .pc-container {
-        gap: 48px
+        gap: 36px
     }
 }
 
